# ee576-computer-vision-projects

./: .gitignore  README.md
hw1-camera-calibration/: CMakeLists.txt  Functions.cpp  Functions.h  Project1_Params.h  README.txt  main.cpp
hw2-object-segmentation/: CMakeLists.txt  Functions.cpp  Functions.h  Project2_Params.h  README.txt  main.cpp
hw3-rgbd-recognition/: CMakeLists.txt  Functions.cpp  Functions.h  MatParser.cpp  MatParser.h  Project3_Params.h  README.txt  main.cpp
hw3-rgbd-recognition/outputs/: bow_summary_1a.txt  part1b_metrics.txt  part1c_gt_candidates_metrics.txt  part1c_metrics.txt  part1d_object_metrics.txt  part1d_scene_metrics.txt  part1e_test_metrics.txt  split_summary.txt
hw3-rgbd-recognition/plot_scripts/: plot_part1b_roc.py  plot_part1c_gt_candidates_roc.py  plot_part1c_roc.py  plot_part1d_object_roc.py  plot_part1d_scene_roc.py  plot_pr_common.py
hw4-optical-flow/: CMakeLists.txt  Functions.cpp  Functions.h  Hw4_Report_KirazA.tex  Project4_Params.h  main.cpp
hw4-optical-flow/report_assets/tables/: metrics_summary.txt
